--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,5 @@
 @import "./styles/Global.scss";
 @import "./styles/Info.scss";
 @import "./styles/Projects.scss";
+@import "./styles/Contact.scss";
+@import "./styles/ContactForm.scss";
