--- a/src/styles/_Footer.scss
+++ b/src/styles/_Footer.scss
@@ -6,7 +6,7 @@ $secondary: #222f3e;
     width: 100%;
     height: auto;
     //clear: both;
-    background-color: $secondary;
+    background-color: #013243;
     text-align: center;
 
     .footer-container {
