--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -27,7 +27,7 @@ $secondary: #222f3e;
   }
 
   .menu-div {
-    background-color: $secondary;
+    background-color: #013243;
     text-align: center;
     list-style-type: none;
     font-size: 1.2em;
