--- a/src/styles/_Contact.scss
+++ b/src/styles/_Contact.scss
@@ -42,14 +42,15 @@
   .left {
     width: 50%;
     float: left;
+    padding-top: 5em;
 
     h2 {
-      padding-top: 2.5em;
+      padding: 0;
       font-size: 2.5em;
     }
 
     p {
-      width: 80%;
+      width: 50%;
       margin: auto;
     }
   }
