--- a/src/App.css
+++ b/src/App.css
@@ -868,7 +868,7 @@ a {
   .contact-container {
     height: 100vh;
     width: 100%;
-    background-image: linear-gradient(45deg, #19B5FE, #22A7F0); }
+    background-image: linear-gradient(45deg, #19B5FE, #446CB3); }
   .left {
     width: 100%;
     height: 20vh; }
