--- a/src/styles/_Contact.scss
+++ b/src/styles/_Contact.scss
@@ -7,7 +7,8 @@
     background-image:
       linear-gradient(
        45deg,
-       #19B5FE, #22A7F0
+       /*#19B5FE, #22A7F0 */
+       #19B5FE, #446CB3
       );
   }
 
