--- a/src/styles/_Info.scss
+++ b/src/styles/_Info.scss
@@ -26,7 +26,7 @@
   }
 
   h1 {
-    font-style: italic;
+    //font-style: italic;
   }
 
   .my-image {
@@ -42,7 +42,7 @@
     width: 100%;
     padding-top: 1em;
     line-height: 2;
-    font-weight: 500;
+    //font-weight: 500;
     text-align: left;
   }
 }
@@ -56,7 +56,7 @@
     height: 100vh;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 10em;
+    margin-bottom: 15em;
     text-align: center;
   }
 
@@ -85,7 +85,7 @@
     p {
       //width: 80%;
       margin: auto;
-      font-weight: bolder;
+      //font-weight: bolder;
     }
   }
 }
