--- a/src/App.css
+++ b/src/App.css
@@ -508,7 +508,11 @@ pre {
   .header {
     width: 100%; }
   .mobile-header {
-    display: block; }
+    width: 100%;
+    height: 4em;
+    display: block;
+    background-color: #222f3e;
+    position: fixed; }
   .logo-container {
     display: none; }
   .full-width-header {
@@ -516,7 +520,17 @@ pre {
   .hamburger {
     position: absolute;
     z-index: 2;
-    padding: 1em; }
+    border: 1px solid white;
+    height: 4em;
+    display: inline-block; }
+    .hamburger a {
+      line-height: 4em; }
+    .hamburger span {
+      background-color: green;
+      height: 4em;
+      margin-left: 1em;
+      font-size: 1.2em;
+      vertical-align: middle; }
   .menu-div {
     background-color: #013243;
     text-align: center;
@@ -699,11 +713,10 @@ pre {
 body {
   background-color: #19B5FE;
   color: snow;
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace; }
 
 h1, h2, h3 {
-  font-family: 'Oswald', sans-serif;
-  text-transform: uppercase; }
+  font-family: 'Roboto', sans-serif; }
 
 h1 {
   font-size: 2.4em; }
@@ -752,8 +765,6 @@ a {
     .nodes img {
       max-width: 100%;
       height: 100%; }
-  h1 {
-    font-style: italic; }
   .my-image {
     max-width: 100%;
     max-height: 200px;
@@ -765,7 +776,6 @@ a {
     width: 100%;
     padding-top: 1em;
     line-height: 2;
-    font-weight: 500;
     text-align: left; } }
 
 /* Small Devices, Tablets */
@@ -776,7 +786,7 @@ a {
     height: 100vh;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 10em;
+    margin-bottom: 15em;
     text-align: center; }
   /*  .name-title {
     h1, h2 {
@@ -793,8 +803,7 @@ a {
     height: auto;
     margin: auto; }
     .description p {
-      margin: auto;
-      font-weight: bolder; } }
+      margin: auto; } }
 
 @media only screen and (min-width: 300px) {
   .project-section {
@@ -869,7 +878,9 @@ a {
     bottom: 0%;
     left: 0%;
     width: 250px;
-    font-size: 20px;
+    padding: .5em;
+    font-size: 16px;
+    text-align: left;
     height: 100%;
     vertical-align: middle;
     background-color: #242424;
@@ -949,9 +960,15 @@ a {
     font-size: 1.2em;
     font-weight: bold;
     background-color: #54f2b0;
+    /*background-image:
+      linear-gradient(
+       45deg,
+       rgb(84, 242, 176), #3FC380
+      );
+    */
     border: none;
     border-radius: 5px;
-    color: snow; }
+    color: white; }
   .message-box {
     font-size: 1.2em; }
     .message-box textarea {
