--- a/src/styles/_ContactForm.scss
+++ b/src/styles/_ContactForm.scss
@@ -45,9 +45,15 @@
     font-size: 1.2em;
     font-weight: bold;
     background-color: rgb(84, 242, 176);
+    /*background-image:
+      linear-gradient(
+       45deg,
+       rgb(84, 242, 176), #3FC380
+      );
+    */
     border: none;
     border-radius: 5px;
-    color: snow;
+    color: white;
   }
 
   .message-box {
