--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -9,7 +9,11 @@ $secondary: #222f3e;
   }
 
   .mobile-header {
+    width: 100%;
+    height: 4em;
     display: block;
+    background-color: $secondary;
+    position: fixed;
   }
 
   .logo-container {
@@ -23,7 +27,25 @@ $secondary: #222f3e;
   .hamburger {
     position: absolute;
     z-index: 2;
-    padding: 1em;
+    //padding: .5em;
+    border: 1px solid white;
+    height: 4em;
+    display: inline-block;
+    //background-color: red;
+
+    a {
+      //background-color: yellow;
+      line-height: 4em;
+      //height: 4em;
+    }
+
+    span {
+      background-color: green;
+      height: 4em;
+      margin-left: 1em;
+      font-size: 1.2em;
+      vertical-align: middle;
+    }
   }
 
   .menu-div {
