--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -116,7 +116,9 @@
     width: 250px;
     //text-align: center;
     //margin: auto;
-    font-size: 20px;
+    padding: .5em;
+    font-size: 16px;
+    text-align: left;
     height: 100%;
     vertical-align: middle;
     //height: 250px;
