--- a/src/App.css
+++ b/src/App.css
@@ -520,17 +520,14 @@ pre {
   .hamburger {
     position: absolute;
     z-index: 2;
-    border: 1px solid white;
-    height: 4em;
-    display: inline-block; }
-    .hamburger a {
-      line-height: 4em; }
+    margin: .5em;
+    border: .5px solid snow;
+    height: 3em; }
     .hamburger span {
-      background-color: green;
-      height: 4em;
-      margin-left: 1em;
-      font-size: 1.2em;
-      vertical-align: middle; }
+      margin: .5em;
+      font-size: 1em;
+      line-height: 3em;
+      text-transform: uppercase; }
   .menu-div {
     background-color: #013243;
     text-align: center;
@@ -594,7 +591,7 @@ pre {
         font-family: 'Oswald', sans-serif; }
         .nav li a:hover {
           text-decoration: none;
-          color: gold; }
+          color: #feca57; }
         .nav li a::before {
           content: '';
           position: absolute;
@@ -621,7 +618,8 @@ pre {
       margin: auto;
       width: 90%; }
     .footer h3 {
-      padding: 1em; }
+      padding: 1em;
+      text-transform: none; }
     .footer hr {
       border: none;
       height: .5px;
@@ -812,6 +810,13 @@ a {
     margin-left: auto;
     margin-right: auto;
     text-align: center; }
+    .project-section a {
+      text-decoration: none; }
+    .project-section .text {
+      color: white;
+      font-size: 1.3em;
+      text-align: left;
+      padding: .5em; }
     .project-section h3 {
       margin: auto;
       padding: 1em; }
@@ -897,7 +902,7 @@ a {
 
 @media only screen and (min-width: 300px) {
   .contact-container {
-    height: 100vh;
+    height: 120vh;
     width: 100%;
     background-image: linear-gradient(45deg, #19B5FE, #446CB3); }
   .left {
@@ -910,9 +915,12 @@ a {
     .left p {
       width: 80%;
       margin: auto; }
+    .left a {
+      color: #feca57; }
   .right {
     width: 100%;
-    height: 80vh; } }
+    height: 80vh;
+    margin-top: 3em; } }
 
 @media only screen and (min-width: 768px) {
   .contact-container {
@@ -929,6 +937,7 @@ a {
       margin: auto; }
   .right {
     width: 50%;
+    margin-top: 0;
     float: right; } }
 
 @media only screen and (min-width: 300px) {
