--- a/src/styles/_Contact.scss
+++ b/src/styles/_Contact.scss
@@ -1,7 +1,7 @@
 
 @media only screen and (min-width : 300px) {
   .contact-container {
-    height: 100vh;
+    height: 120vh;
     width: 100%;
     //background-color: #22A7F0;
     background-image:
@@ -26,11 +26,16 @@
       width: 80%;
       margin: auto;
     }
+
+    a {
+      color: #feca57;
+    }
   }
 
   .right {
     width: 100%;
     height: 80vh;
+    margin-top: 3em;
   }
 
 }
@@ -58,6 +63,7 @@
 
   .right {
     width: 50%;
+    margin-top: 0;
     float: right;
   }
 
