Changed background to red to test if pushing to repo works after reverting back several commits

--- a/src/styles/_Global.scss
+++ b/src/styles/_Global.scss
@@ -12,7 +12,7 @@ $secondary: #222f3e;
 }
 
 body {
-  background-color: #19B5FE;
+  background-color: red; //#19B5FE;
   color: snow;
   //font-family: 'Roboto', sans-serif;
   font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace;
