--- a/src/App.css
+++ b/src/App.css
@@ -709,7 +709,7 @@ pre {
   margin: auto; }
 
 body {
-  background-color: #19B5FE;
+  background-color: red;
   color: snow;
   font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier, monospace; }
 
