--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,4 @@
 @import "./styles/Projects.scss";
 @import "./styles/Contact.scss";
 @import "./styles/ContactForm.scss";
+@import "./styles/TestModal.scss";
