Adjusted vh of project li sections on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -740,7 +740,7 @@ h2 {
   font-size: 2em; }
 
 h3 {
-  font-size: 1.4em; }
+  font-size: 1.6em; }
 
 a {
   color: snow;
@@ -762,24 +762,17 @@ a {
 /* Custom, iPhone Retina */
 @media only screen and (min-width: 300px) {
   .info-section {
-    padding-top: 10em;
+    padding-top: 15em;
+    padding-bottom: 15em;
     width: 90%;
     height: auto;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10em;
     text-align: center; }
-  .nodes {
-    height: auto;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    position: absolute;
-    opacity: 0.1; }
-    .nodes img {
-      max-width: 100%;
-      height: 100%; }
+  h1 {
+    padding-top: 1em;
+    padding-bottom: 1em; }
   .my-image {
     max-width: 100%;
     max-height: 200px;
@@ -797,11 +790,11 @@ a {
 @media only screen and (min-width: 768px) {
   .info-section {
     padding-top: 10em;
+    padding-bottom: 10em;
     width: 100%;
-    height: 100vh;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 15em;
     text-align: center; }
   /*  .name-title {
     h1, h2 {
@@ -835,15 +828,15 @@ a {
       text-align: left;
       padding: .5em; }
     .project-section h3 {
-      margin: auto;
       padding-bottom: 1em; }
     .project-section hr {
-      margin-bottom: 5em;
+      margin-bottom: 10em;
       width: 90%; }
     .project-section ul {
       list-style-type: none; }
       .project-section ul li {
-        padding-bottom: 10em; }
+        padding-bottom: 10em;
+        height: 100vh; }
       .project-section ul p {
         width: 100%;
         margin: auto;
@@ -877,7 +870,8 @@ a {
       .project-section ul li {
         display: inline-block;
         vertical-align: top;
-        padding: .5em; }
+        padding: .5em;
+        height: auto; }
   .image-container {
     position: relative;
     width: 100%;
