--- a/src/App.css
+++ b/src/App.css
@@ -842,7 +842,7 @@ a {
 
 @media only screen and (min-width: 300px) and (orientation: landscape) {
   .project-section .image-container {
-    height: auto; } }
+    height: 120vh; } }
 
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
