--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -66,7 +66,7 @@
 @media only screen and (min-width : 300px) and (orientation: landscape) {
   .project-section {
     .image-container {
-      height: auto;
+      height: 120vh;
     }
   }
 }
