--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -53,6 +53,10 @@
       }
     }
 
+    .image-container {
+      height: 120vh;
+    }
+
     .project-image {
       //max-width: 100%;
       //max-height: 100%;
@@ -60,14 +64,6 @@
       width: 100%;
     }
 
-  }
-}
-
-@media only screen and (min-width : 300px) and (orientation: landscape) {
-  .project-section {
-    .image-container {
-      height: 120vh;
-    }
   }
 }
 
@@ -101,6 +97,10 @@
     margin-bottom: 20em;
     z-index: 1;
     padding-top: 5em;
+
+    .image-container {
+      height: auto;
+    }
 
     hr {
       width: 90%;
