--- a/src/App.css
+++ b/src/App.css
@@ -827,7 +827,7 @@ a {
       list-style-type: none; }
       .project-section ul li {
         padding-bottom: 10em;
-        height: auto; }
+        height: 150vh; }
       .project-section ul p {
         width: 100%;
         margin: auto;
@@ -842,12 +842,13 @@ a {
       height: 250px;
       width: 100%; } }
 
-/*@media only screen and (orientation:landscape) and (max-width: 300px) {
-  body {
-    background-color: red;
-  }
-}
-*/
+@media only screen and (orientation: landscape) and (max-width: 768px) {
+  .project-section ul li {
+    height: auto; }
+  .project-section .project-image {
+    width: 300px;
+    height: 200px; } }
+
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
   .project-section {
