--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -39,8 +39,7 @@
       li {
         padding-bottom: 10em;
         //background-color: yellow;
-        //height: 100vh;
-        height: auto;
+        height: 150vh;
       }
 
       p {
@@ -69,12 +68,19 @@
 }
 
 
-/*@media only screen and (orientation:landscape) and (max-width: 300px) {
-  body {
-    background-color: red;
+@media only screen and (orientation:landscape) and (max-width: 768px) {
+  .project-section {
+    ul li {
+      height: auto;
+    }
+
+    .project-image {
+      width: 300px;
+      height: 200px;
+    }
   }
 }
-*/
+
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
